# rws-dev

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.txt
root/: config.js  root_db.sqlite
root/apps/test_app/public_html/: index.ts
root/static/libs/: libs.js  runtime.js
root/static/libs/axios/: index.js  index.min.js  lib.json
root/static/libs/carbon-components/: dark-mode.css  dark-mode.min.css  index.js  index.min.js  lib.json
root/static/libs/carbon-components-react/: index.js  index.min.js  lib.json
root/static/libs/carbon-icon-helpers/: index.js  index.min.js  lib.json
root/static/libs/carbon-icons/: index.js  index.min.js  lib.json
root/static/libs/carbon-icons-react/: index.min.js  lib.json
root/static/libs/classnames/: index.js  index.min.js  lib.json
root/static/libs/compute-scroll-into-view/: index.js  index.min.js  lib.json
root/static/libs/csstype/: lib.json
root/static/libs/downshift/: index.js  index.min.js  lib.json
root/static/libs/flatpickr/: index.js  index.min.js  index.min.js.LICENSE.txt  lib.json
root/static/libs/history/: index.js  index.min.js  lib.json
root/static/libs/hoist-non-react-statics/: index.js  index.min.js  lib.json
root/static/libs/invariant/: index.js  index.min.js  lib.json
root/static/libs/isarray/: index.js  index.min.js  lib.json
root/static/libs/lodash.debounce/: index.js  index.min.js  lib.json
root/static/libs/lodash.findlast/: index.js  index.min.js  lib.json
root/static/libs/lodash.isequal/: index.js  (+2 more)
root/static/root_portal/: index.css  index.html  index.js  page.js  services.js
src/: main.rs  utils.rs
src/deno/: bd-load.js  compiler_runtime.js  fs_util.rs  metrics.rs  mod.rs  worker.rs
src/deno/acorn/: index.js  index.min.js  lib.json
src/deno/js_ops/: 99_main.js
src/deno/rs_ops/: crypto.rs  fs.rs  fs_events.rs  io.rs  mod.rs  path_resolve.rs  runtime.rs  timers.rs  tty.rs
src/deno/source-map/: index.js  index.min.js  lib.json
src/deno/terser/: index.js  index.min.js  lib.json
src/deno/typescript/: index.min.js  lib.json
src/root_storage/: mod.rs  sqlite.rs
webpack-compiler/: package-lock.json  package.json  run.js  webpack.config.prod.5.js  webpack.config.prod.js
(+71 files in other folders)
