[package]
name = "rws-dev"
version = "0.1.0"
authors = ["Scott Lott <me@scottlott.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-http = "2.2.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
deno_core = "0.74.0"
lazy_static = "1.4.0"
serde = "1.0.118"
tokio = { version = "0.2.6", features = ["full"] }
