[package]
name = "rws-dev"
version = "0.1.0"
authors = ["Scott Lott <me@scottlott.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
actix = "0.10.0"
actix-files = "0.5.0"
actix-http = "2.2.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
async-trait = "0.1.42"
deno_core = "0.75.0"
lazy_static = "1.4.0"
libc = "0.2.77"
nix = "0.19.1"
no_proto = "0.7.3"
serde = { version = "1.0.116", features = ["derive"] }
shell-escape = "0.1.5"
sys-info = "0.7.0"
termcolor = "1.1.0"
sqlite = "0.25.3"
tokio = { version = "0.2.6", features = ["full"] }
tokio-rustls = "0.14.1"
log = "0.4.11"
deno_crypto = "0.9.0"
filetime = "0.2.13"
rand = "0.8.0"
notify = "5.0.0-pre.3"
