[package]
name = "rws-dev"
version = "0.1.0"
authors = ["Scott Lott <me@scottlott.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
actix = "0.11.1"
actix-files = "0.6.0-beta.4"
actix-http = "3.0.0-beta.5"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.5"
actix-web-actors = "3.0.0"
async-trait = "0.1.48"
deno_core = "0.83.0"
lazy_static = "1.4.0"
libc = "0.2.93"
nix = "0.20.0"
no_proto = "0.9.60"
serde = { version = "1.0.125", features = ["derive"] }
shell-escape = "0.1.5"
sys-info = "0.9.0"
termcolor = "1.1.2"
sqlite = "0.26.0"
tokio = { version = "1.3.0", features = ["full"] }
tokio-rustls = "0.22.0"
log = "0.4.14"
deno_crypto = "0.16.1"
filetime = "0.2.14"
rand = "0.8.3"
notify = "5.0.0-pre.6"
anyhow = "1.0.40"
